--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
-crewai>=0.28.0
-langchain>=0.1.0
-langflow>=0.6.0
+# Core
+crewai==0.126.0
+langchain==0.1.0
+
+# Modelos e Embeddings
 huggingface-hub>=0.16.4
 sentence-transformers>=2.2.2
-faiss-cpu>=1.7.4
+openai>=1.0.0
+transformers>=4.30.0
+torch>=2.0.0
+
+# Banco de Dados Vetorial
+faiss-cpu>=1.7.4  # Use faiss-gpu se tiver GPU
+chromadb>=0.4.0
+
+# Interface Web
+streamlit>=1.24.0
+streamlit-chat>=0.1.0
+
+# Utilitários
 python-dotenv>=1.0.0
+pydantic>=2.0.0
 pydantic-settings>=2.0.0
+python-multipart>=0.0.5
+requests>=2.28.0
